--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^6.0.1",
     "@angular/cdk": "^6.0.2",
     "@angular/common": "^6.0.0",
@@ -22,6 +23,7 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@types/googlemaps": "^3.30.8",
     "angularfire2": "^5.0.0-rc.8.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
